force-app/main/default/objects/FieloEE__Triggers__c/FieloEE__Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Triggers</label>
</CustomObject>