force-app/main/default/objects/FieloEE__Triggers__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Member</label>
    <type>Checkbox</type>
</CustomField>