force-app/main/default/objects/FieloEE__Triggers__c/fields/FieloEE__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Redemption__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Redemption</label>
    <type>Checkbox</type>
</CustomField>