force-app/main/default/objects/FieloEE__Triggers__c/fields/FieloEE__RedemptionItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionItem__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Redemption Item</label>
    <type>Checkbox</type>
</CustomField>