force-app/main/default/objects/FieloEE__Triggers__c/fields/FieloEE__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Transaction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Transaction</label>
    <type>Checkbox</type>
</CustomField>